[package]
name = "wasm_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
reqwest = "0.12.4"
wasm-bindgen-futures = "0.4.42"
js-sys = "0.3.69"
serde = { version = "1.0.203", features = ["derive"] }


[lib]
crate-type = ["cdylib", "rlib"]

